disable gallery action when no images are visible, fixes #620
Closes #620

Merge request studip/studip!1005

--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -143,7 +143,8 @@ div#sidebar-navigation {
         box-sizing: border-box;
         line-height: 16px;
     }
-    span[disabled] {
+    span[disabled],
+    a[disabled] {
         color: $dark-gray-color-80;
         cursor: not-allowed;
         font-weight: lighter;
